--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Proveedor/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Proveedor/Modificar.cshtml
@@ -387,6 +387,10 @@
         get_info_x_num_cedula();
     });
 
+    $("#IdClaseProveedor").change(function () {
+        get_info_clase_proveedor();
+    });
+
     $("#pe_cedulaRuc").keyup(function () {
         var tipo_doc = $("#IdTipoDocumento").val();
         var cedula = $("#pe_cedulaRuc").val();
