--- a/ERP/Core.Erp.Web/Areas/Compras/Views/AprobacionOC/_GridViewPartial_aprobacion_oc.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/AprobacionOC/_GridViewPartial_aprobacion_oc.cshtml
@@ -5,7 +5,6 @@
         settings.Name = "GridView_aprobacion_oc";
         settings.CallbackRouteValues = new { Controller = "AprobacionOC", Action = "GridViewPartial_aprobacion_oc", IdSucursal = ViewBag.IdSucursal, fecha_ini = ViewBag.fecha_ini, fecha_fin = ViewBag.fecha_fin };
         settings.KeyFieldName = "IdOrdenCompra";
-
         settings.Width = Unit.Percentage(100);
 
         settings.SettingsPager.Visible = true;
@@ -35,23 +34,18 @@
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
 
-        settings.Columns.Add("IdOrdenCompra", "ID").Width = Unit.Percentage(10);
+        settings.Columns.Add("IdOrdenCompra", "ID").Width = Unit.Percentage(5);
         settings.Columns.Add("Su_Descripcion", "Sucursal").Width = Unit.Percentage(10);
         settings.Columns.Add(column =>
         {
             column.FieldName = "oc_fecha";
-            column.Caption = "Fecha pago";
+            column.Caption = "Fecha compra";
+            column.PropertiesEdit.DisplayFormatString = "{0:dd/MM/yyyy}";
             column.Width = Unit.Percentage(10);
-            column.PropertiesEdit.DisplayFormatString = "d";
-            column.EditorProperties().DateEdit(sp =>
-            {
-                column.PropertiesEdit.DisplayFormatString = "d";
-                sp.Width = Unit.Percentage(100);
-            });
         });
         settings.Columns.Add("pe_nombreCompleto", "Proveedor").Width = Unit.Percentage(30);
-        settings.Columns.Add("oc_observacion", "Observación").Width = Unit.Percentage(30);
-        settings.Columns.Add("IdEstadoAprobacion_cat", "Estado Aprobación").Width = Unit.Percentage(20);
+        settings.Columns.Add("oc_observacion", "Observación").Width = Unit.Percentage(25);
+        settings.Columns.Add("IdEstadoAprobacion_cat", "Estado Aprobación").Width = Unit.Percentage(10);
 
         settings.Columns.Add(column =>
         {
