--- a/ERP/Core.Erp.Web/Areas/Compras/Views/AprobacionOC/_GridViewPartial_aprobacion_oc.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/AprobacionOC/_GridViewPartial_aprobacion_oc.cshtml
@@ -44,8 +44,22 @@
             column.Width = Unit.Percentage(10);
         });
         settings.Columns.Add("pe_nombreCompleto", "Proveedor").Width = Unit.Percentage(30);
-        settings.Columns.Add("oc_observacion", "Observación").Width = Unit.Percentage(25);
-        settings.Columns.Add("IdEstadoAprobacion_cat", "Estado Aprobación").Width = Unit.Percentage(10);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "Total";
+            column.Caption = "$Valor";
+            column.Width = Unit.Percentage(10);
+            column.EditorProperties().SpinEdit(sp =>
+            {
+                sp.MinValue = 0;
+                sp.MaxValue = 999999999;
+                sp.Width = Unit.Percentage(100);
+                column.PropertiesEdit.DisplayFormatString = "n2";
+
+            });
+        });
+        settings.Columns.Add("oc_observacion", "Observación").Width = Unit.Percentage(20);
+        settings.Columns.Add("IdEstadoAprobacion_cat", "Estado Aprobación").Width = Unit.Percentage(5);
 
         settings.Columns.Add(column =>
         {
