--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Anular.cshtml
@@ -1,7 +1,5 @@
 ﻿@model Core.Erp.Info.RRHH.ro_empleado_Info
 @{
-    /**/
-
     ViewBag.Title = "Anular empleado";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
@@ -11,7 +9,7 @@
     {
         <div class="alert alert-warning alert-dismissible">
             <h4>
-                <i class="icon fa fa-warning"></i> @
+                <i class="icon fa fa-warning"></i> @ViewBag.mensaje
             </h4>
         </div>
     }
@@ -23,16 +21,16 @@
 
 @using (Html.BeginForm("Anular", "Empleado", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
+
     @Html.HiddenFor(q => q.IdPersona);
     @Html.HiddenFor(q => q.IdEmpresa);
     @Html.HiddenFor(q => q.IdEmpleado);
-
     <div class="row">
         <div class="col-md-12">
-            @*<div class="col-md-2" height="100" width="100" style="border:solid">
+            @*<div class="col-md-2" height = "100"  width = "100"  style = "border:solid">
                     <label for="foto">Foto*</label>
                     <div class="form-group">
-                        @Html.EditorFor(q => q.em_foto, new { @class = "form-control" })
+                        @Html.EditorFor(q => q.em_foto,  new { @class = "form-control" })
                     </div>
                 </div>*@
 
@@ -46,22 +44,22 @@
             <div class="col-md-3">
                 <div class="form-group">
                     <label for="IdTipoDocumento">Tipo documento*</label>
-                    @Html.DropDownListFor(q => q.IdTipoDocumento, new SelectList(ViewBag.lst_tipo_docu, "CodCatalogo", "ca_descripcion"), new { @class = "form-control" })
+                    @Html.DropDownListFor(q => q.IdTipoDocumento, new SelectList(ViewBag.lst_tipo_docu, "CodCatalogo", "ca_descripcion"), new { @class = "form-control", @id = "IdTipoDocumento" })
                     @Html.ValidationMessageFor(q => q.IdTipoDocumento, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="col-md-3">
                 <div class="form-group">
-                    <label for="pe_cedulaRuc">Código</label>
+                    <label for="em_codigo">Código</label>
                     @Html.TextBoxFor(q => q.em_codigo, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.em_codigo, "", new { @class = "text-danger", @id = "pe_cedulaRuc" })
+                    @Html.ValidationMessageFor(q => q.em_codigo, "", new { @class = "text-danger", @id = "em_codigo" })
                 </div>
             </div>
             <div class="col-md-3">
                 <div class="form-group">
                     <label for="pe_cedulaRuc">Número documento*</label>
-                    @Html.TextBoxFor(q => q.pe_cedulaRuc, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.pe_cedulaRuc, "", new { @class = "text-danger", @id = "pe_cedulaRuc" })
+                    @Html.TextBoxFor(q => q.pe_cedulaRuc, new { @class = "form-control", @id = "pe_cedulaRuc" })
+                    @Html.ValidationMessageFor(q => q.pe_cedulaRuc, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
@@ -176,15 +174,15 @@
                                 <div class="input-group-addon">
                                     <i class="fa fa-calendar"></i>
                                 </div>
-                                @Html.DevExpress().DateEditFor(q=> q.pe_fechaNacimiento, settings =>
-                            {
-                                settings.Name = "pe_fechaNacimiento";
-                                settings.Properties.UseMaskBehavior = true;
-                                settings.Properties.EditFormat = EditFormat.Date;
-                                settings.Properties.EditFormatString = "dd/MM/yyyy";
-                                settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
-                                settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                            }).GetHtml()
+                                @Html.DevExpress().DateEditFor(q => q.pe_fechaNacimiento, settings =>
+                           {
+                               settings.Name = "pe_fechaNacimiento";
+                               settings.Properties.UseMaskBehavior = true;
+                               settings.Properties.EditFormat = EditFormat.Date;
+                               settings.Properties.EditFormatString = "dd/MM/yyyy";
+                               settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                               settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                           }).GetHtml()
                                 @Html.ValidationMessageFor(q => q.pe_fechaNacimiento, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -208,7 +206,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="form-group">
-                            <label for="em_lugarNacimiento">Luar nacimiento*</label>
+                            <label for="em_lugarNacimiento">Lugar nacimiento*</label>
                             @Html.TextBoxFor(q => q.em_lugarNacimiento, new { @class = "form-control" })
                             @Html.ValidationMessageFor(q => q.em_lugarNacimiento, "", new { @class = "text-danger" })
                         </div>
@@ -408,6 +406,7 @@
             </div>
 
 
+
             <div role="tabpanel" class="tab-pane" id="tb_info_nomina">
                 <div class="row">
                     <div class="col-md-3">
@@ -419,7 +418,7 @@
                     </div>
                     <div class="col-md-3">
                         <div class="form-group">
-                            <label for="em_fechaIngaRol">Fecha ingreso</label>
+                            <label for="em_fechaIngaRol">Fecha ingreso*</label>
                             <div class="input-group date">
                                 <div class="input-group-addon">
                                     <i class="fa fa-calendar"></i>
@@ -540,13 +539,14 @@
                 </div>
 
 
+
             </div>
 
             <div role="tabpanel" class="tab-pane" id="tb_info_adicional">
                 <div class="row">
                     <div class="col-md-4">
                         <div class="form-group">
-                            <label for="IdCondicionDiscapacidadSRI">Condición de empleado con respecto a discapacidad</label>
+                            <label for="IdCondicionDiscapacidadSRI">Condición de empleado conrespecto a discapacidad</label>
                             @Html.DevExpress().ComboBoxFor(q => q.IdCondicionDiscapacidadSRI, settings =>
                                {
                                    settings.Name = "IdCondicionDiscapacidadSRI";
@@ -587,24 +587,24 @@
                 <div class="row">
                     <div class="col-md-8">
                         <div class="form-group">
-                            <label for="IdTipoIdentDiscapacitadoSustitutoSRI">Tipo documento persona sustituida</label>
+                            <label for="IdCiudad">Tipo documento persona sustituida</label>
                             @Html.DevExpress().ComboBoxFor(q => q.IdTipoIdentDiscapacitadoSustitutoSRI, settings =>
-                       {
-                           settings.Name = "IdTipoIdentDiscapacitadoSustitutoSRI";
-                           settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                           settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                           settings.Properties.Columns.Add("CodCatalogo", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                           settings.Properties.Columns.Add("ca_descripcion", "Desripción").Width = System.Web.UI.WebControls.Unit.Percentage(50);
-                           //Campo ID
-                           settings.Properties.ValueField = "CodCatalogo";
-                           settings.Properties.ValueType = typeof(string);
-                           settings.Properties.TextField = "ca_descripcion";
-                           //Boton para seleccionar ningun registro
-                           settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
-                           settings.Properties.NullText = "== Seleccione ==";
-                           settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                               {
+                                   settings.Name = "IdTipoIdentDiscapacitadoSustitutoSRI";
+                                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                                   settings.Properties.DisplayFormatString = "[{0}] - {2}";
+                                   settings.Properties.Columns.Add("CodCatalogo", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+                                   settings.Properties.Columns.Add("ca_descripcion", "Desripción").Width = System.Web.UI.WebControls.Unit.Percentage(50);
+                                   //Campo ID
+                                   settings.Properties.ValueField = "CodCatalogo";
+                                   settings.Properties.ValueType = typeof(string);
+                                   settings.Properties.TextField = "ca_descripcion";
+                                   //Boton para seleccionar ningun registro
+                                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
+                                   settings.Properties.NullText = "== Seleccione ==";
+                                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
 
-                       }).BindList(ViewBag.lst_tipo_doc_sustutuido).GetHtml()
+                               }).BindList(ViewBag.lst_tipo_doc_sustutuido).GetHtml()
                             @Html.ValidationMessageFor(q => q.IdTipoIdentDiscapacitadoSustitutoSRI, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -672,6 +672,7 @@
                 </div>
             </div>
 
+
             <div role="tabpanel" class="tab-pane" id="tb_info_foto">
                 <div class="row">
                     <div class="col-md-12">
@@ -701,46 +702,47 @@
 
             </div>
 
+
         </div>
     </div>
 
     <div class="box-footer">
-        <button type="submit" class="btn btn-danger">Anular</button>
-        <a class="btn btn-default" href="@Url.Action("Index", "Empleado", new { Area ="RRHH" }, null)">Cancelar</a>
+        <button type="submit" class="btn btn-primary">Guardar</button>
+        <a class="btn btn-danger" href="@Url.Action("Index", "Empleado", new { Area ="RRHH" }, null)">Cancelar</a>
     </div>
 
     @section Scripts {
-        @
+        @Scripts.Render("~/bundles/jqueryval")
     }
-    /**/
 
-    <script>
+}
 
 
-        $("#pe_cedulaRuc").keyup(function () {
-            validar();
-        });
-        function validar() {
-            var tipo_doc = $("#IdTipoDocumento").val();
-            var cedula = $("#pe_cedulaRuc").val();
+<script>
+    $("#pe_cedulaRuc").keyup(function () {
+        validar();
+    });
+    function validar() {
+        var tipo_doc = $("#IdTipoDocumento").val();
+        var cedula = $("#pe_cedulaRuc").val();
 
-            if (tipo_doc == "RUC") {
-                if (cedula.length > 13) {
+        if (tipo_doc == "RUC") {
+            if (cedula.length > 13) {
+                var len = $("#pe_cedulaRuc").val();
+                len = len.substring(0, 13);
+                $("#pe_cedulaRuc").val(len);
+            }
+
+        }
+        else
+            if (tipo_doc == "CED") {
+                if (cedula.length > 10) {
                     var len = $("#pe_cedulaRuc").val();
-                    len = len.substring(0, 13);
+                    len = len.substring(0, 10);
                     $("#pe_cedulaRuc").val(len);
                 }
-
             }
-            else
-                if (tipo_doc == "CED") {
-                    if (cedula.length > 10) {
-                        var len = $("#pe_cedulaRuc").val();
-                        len = len.substring(0, 10);
-                        $("#pe_cedulaRuc").val(len);
-                    }
-                }
-        }
+    }
 
 
-    </script>
+</script>
