--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Nuevo.cshtml
@@ -417,7 +417,7 @@
                     </div>
                     <div class="col-md-3">
                         <div class="form-group">
-                            <label for="em_fechaIngaRol">Fecha ingreso</label>
+                            <label for="em_fechaIngaRol">Fecha ingreso*</label>
                             <div class="input-group date">
                                 <div class="input-group-addon">
                                     <i class="fa fa-calendar"></i>
