--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/DepartamentoPorArea/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/DepartamentoPorArea/Nuevo.cshtml
@@ -116,7 +116,7 @@
 
     function get_areas() {
             var datos = {
-                division: IdDivision.GetValue()
+                IdDivision: IdDivision.GetValue()
             }
 
             $.ajax({
@@ -131,7 +131,7 @@
                 success: function (data) {
 
                     $.each(data, function (i, row) {
-                       // $("#IdNomina_TipoLiqui").append("<option value=" + row.IdNomina_TipoLiqui + ">" + row.DescripcionProcesoNomina + "</option>");
+                        $("#IdNomina_TipoLiqui").append("<option value=" + row.IdArea + ">" + row.Descripcion + "</option>");
                     });
                 },
                 error: function (error) {
