--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ImportacionNovedades/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ImportacionNovedades/Nuevo.cshtml
@@ -22,8 +22,10 @@
     @Html.HiddenFor(q => q.IdEmpresa)
     @Html.HiddenFor(q => q.IdCarga)
 
+   
+<div class="row">
+    <div class="col-md-12">
 
-    <div class="row">
         <div class="col-md-4">
             <div class="form-group">
                 <label for="IdCargo">Sucursal*</label>
@@ -95,6 +97,7 @@
                 @Html.ValidationMessageFor(q => q.IdNominaTipo, "", new { @class = "text-danger" })
             </div>
         </div>
+    </div>
     </div>
 
     <div class="row">
@@ -196,6 +199,6 @@
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
     }
-}
+    }
 
 
