--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/NominaTipoLiquidacion/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/NominaTipoLiquidacion/Nuevo.cshtml
@@ -11,7 +11,7 @@
 @using (Html.BeginForm("Nuevo", "NominaTipoLiquidacion", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdEmpresa);
-    @Html.HiddenFor(q => q.IdRol);
+    @Html.HiddenFor(q => q.IdNomina_TipoLiqui);
 
     <div class="row">
         <div class="col-md-12">
