--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoNovedad/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoNovedad/Modificar.cshtml
@@ -18,7 +18,7 @@
             <div class="col-md-12">
 
                 <div class="form-group">
-                    <label for="IdProveedor">Empleado</label>
+                    <label for="IdProveedor">Empleado*</label>
                     @Html.Partial("_CmbEmpleado_novedades", Model.IdEmpleado)
                     @Html.ValidationMessageFor(q => q.IdEmpleado, "", new { @class = "text-danger" })
                 </div>
