--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/Anular.cshtml
@@ -18,7 +18,46 @@
     }
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
+<script type="text/javascript">
+    $(function () {
+        $("#IdTipo_Persona").change(function () {
+            IdEntidad.SetValue(null);
+        });
 
+        CargarEstadoAprobacion();
+    });
+    var selectedIDs;
+    function OnBeginCallback(s, e) {
+        e.customArgs["IdTipo_Persona"] = $("#IdTipo_Persona").val();
+        e.customArgs["Entidad"] = IdEntidad.GetValue();
+        e.customArgs["selectedIDs"] = selectedIDs;
+    }
+
+    function CargarEstadoAprobacion() {
+        $("#IdEstado_op").empty();
+
+        var datos = {
+            IdEmpresa: $("#IdEmpresa").val(),
+            IdTipo_op: IdTipo_op.GetValue()
+        }
+
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("CargarEstadoAprobacion", "OrdenPago", new { Area = "CuentasPorPagar" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                $("#IdEstado_op").text(data.DescripcionAprobacion)
+            },
+            error: function (error) {
+            }
+        });
+    };
+</script>
 @using (Html.BeginForm("Anular", "OrdenPago", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdEmpresa)
@@ -27,115 +66,44 @@
     @Html.HiddenFor(q => q.IdPersona)
     @Html.HiddenFor(q => q.info_comprobante.IdTipoCbte)
     @Html.HiddenFor(q => q.info_comprobante.IdCbteCble)
+
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <div class="form-group">
-                    <label for="IdSucursal">Tipo de persona*</label>
-                    @Html.DevExpress().ComboBoxFor(q => q.IdTipo_Persona, settings =>
-               {
-                   settings.Name = "IdTipo_Persona";
-                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                   settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                   settings.Properties.Columns.Add("IdTipo_Persona", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(20);
-                   settings.Properties.Columns.Add("Descricpion", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(80);
-                   //Campo ID
-                   settings.Properties.ValueField = "IdTipo_Persona";
-                   settings.Properties.ValueType = typeof(string);
-                   settings.Properties.TextField = "Descricpion";
-                   //Boton para seleccionar ningun registro
-                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
-                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-
-               }).BindList(ViewBag.lst_persona_tipo).GetHtml()
-                    @Html.ValidationMessageFor(q => q.IdTipo_Persona, "", new { @class = "text-danger" })
+                    <label for="IdSucursal">Sucursal*</label>
+                    @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_Descripcion"), new { @class = "form-control", @id = "IdSucursal" })
+                    @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
                 </div>
             </div>
-
-            <div class="col-md-6">
+            <div class="col-md-4">
                 <div class="form-group">
                     <label for="IdTipo_op">Tipo orden pago*</label>
                     @Html.DevExpress().ComboBoxFor(q => q.IdTipo_op, settings =>
-               {
-                   settings.Name = "IdTipo_op";
-                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                   settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                   settings.Properties.Columns.Add("IdTipo_op", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(20);
-                   settings.Properties.Columns.Add("Descripcion", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(80);
-                   //Campo ID
-                   settings.Properties.ValueField = "IdTipo_op";
-                   settings.Properties.ValueType = typeof(string);
-                   settings.Properties.TextField = "Descricpion";
-                   //Boton para seleccionar ningun registro
-                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
-                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-
-               }).BindList(ViewBag.lst_tipo_orden_pago).GetHtml()
-                    @Html.ValidationMessageFor(q => q.IdTipo_op, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label for="IdProveedor">Beneficiario*</label>
-                    @Html.DevExpress().ComboBoxFor(q => q.IdEntidad, settings =>
-               {
-                   settings.Name = "IdEntidad";
-                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                   settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                   settings.Properties.Columns.Add("IdProveedor", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                   settings.Properties.Columns.Add("info_persona.pe_nombreCompleto", "Proveedor").Width = System.Web.UI.WebControls.Unit.Percentage(80);
-                   settings.Properties.Columns.Add("info_persona.pe_cedulaRuc", "Cédula").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                   settings.Properties.CallbackPageSize = 10;
-                   //Campo ID
-                   settings.Properties.ValueField = "IdProveedor";
-                   settings.Properties.ValueType = typeof(int);
-                   settings.Properties.TextField = "info_persona.pe_nombreCompleto";
-                   //Boton para seleccionar ningun registro
-                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
-                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-               }).BindList(ViewBag.lst_proveedores).GetHtml()
-                    @Html.ValidationMessageFor(q => q.IdEntidad, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label for="IdBanco_acreditacion">Tipo flujo</label>
-                    @Html.Partial("_CmbFlujo_OP", Model.IdTipoFlujo)
-                    @Html.ValidationMessageFor(q => q.IdTipoFlujo, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label for="IdFormaPago">Forma de pago*</label>
-                    @Html.DevExpress().ComboBoxFor(q => q.IdFormaPago, settings =>
                        {
-                           settings.Name = "IdFormaPago";
+                           settings.Name = "IdTipo_op";
                            settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
                            settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                           settings.Properties.Columns.Add("IdFormaPago", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(20);
-                           settings.Properties.Columns.Add("descripcion", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(80);
+                           settings.Properties.Columns.Add("IdTipo_op", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(20);
+                           settings.Properties.Columns.Add("Descripcion", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(80);
                            //Campo ID
-                           settings.Properties.ValueField = "IdFormaPago";
+                           settings.Properties.ValueField = "IdTipo_op";
                            settings.Properties.ValueType = typeof(string);
-                           settings.Properties.TextField = "Descripción";
+                           settings.Properties.TextField = "Descricpion";
                            //Boton para seleccionar ningun registro
                            settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
                            settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-
-                       }).BindList(ViewBag.lst_forma_pago).GetHtml()
-                    @Html.ValidationMessageFor(q => q.IdFormaPago, "", new { @class = "text-danger" })
+                           settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e){CargarEstadoAprobacion();}";
+                       }).BindList(ViewBag.lst_tipo_orden_pago).GetHtml()
+                    @Html.ValidationMessageFor(q => q.IdTipo_op, "", new { @class = "text-danger" })
                 </div>
             </div>
-
+            <div class="col-md-1">
+                <div class="form-group">
+                    <label for="Estado">Estado</label><br />
+                    <label id="IdEstado_op" for="IdEstado_op" style="color:red;"></label>
+                </div>
+            </div>
             <div class="col-md-2">
                 <div class="form-group">
                     <label for="Fecha">Fecha*</label>
@@ -143,37 +111,79 @@
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
                         </div>
-                        @Html.DevExpress().DateEditFor(q=> q.Fecha, settings =>
-                    {
-                        settings.Name = "Fecha";
-                        settings.Properties.UseMaskBehavior = true;
-                        settings.Properties.EditFormat = EditFormat.Date;
-                        settings.Properties.EditFormatString = "dd/MM/yyyy";
-                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
-                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                    }).GetHtml()
+                        @Html.DevExpress().DateEditFor(q => q.Fecha, settings =>
+                        {
+                            settings.Name = "Fecha";
+                            settings.Properties.UseMaskBehavior = true;
+                            settings.Properties.EditFormat = EditFormat.Date;
+                            settings.Properties.EditFormatString = "dd/MM/yyyy";
+                            settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                            settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                        }).GetHtml()
                         @Html.ValidationMessageFor(q => q.Fecha, "", new { @class = "text-danger" })
                     </div>
                 </div>
             </div>
-            <div class="col-md-2">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-3">
                 <div class="form-group">
-                    <label for="Fecha_Pago">Fecha pago*</label>
-                    <div class="input-group date">
-                        <div class="input-group-addon">
-                            <i class="fa fa-calendar"></i>
-                        </div>
-                        @Html.DevExpress().DateEditFor(q=> q.Fecha_Pago, settings =>
+                    <label for="IdTipo_Persona">Tipo persona:*</label>
+                    @Html.DropDownListFor(q => q.IdTipo_Persona, new SelectList(ViewBag.lst_tipo_personas, "Key", "Value"), new { @class = "form-control", @id = "IdTipo_Persona" })
+                    @Html.ValidationMessageFor(q => q.IdTipo_Persona, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-9">
+                <div class="form-group">
+                    <label for="IdEntidad">Beneficiario:*</label>
+                    @Html.Partial("_CmbPersona_OP", Model.IdEntidad)
+                    @Html.ValidationMessageFor(q => q.IdEntidad, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-3">
+                <div class="form-group">
+                    <label for="IdBanco_acreditacion">Tipo flujo</label>
+                    @Html.Partial("_CmbFlujo_OP", Model.IdTipoFlujo)
+                    @Html.ValidationMessageFor(q => q.IdTipoFlujo, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-9">
+                <div class="form-group">
+                    <label for="co_observacion">Observación*</label>
+                    @Html.TextBoxFor(q => q.Observacion, new { @class = "form-control", @id = "observacion" })
+                    @Html.ValidationMessageFor(q => q.Observacion, "", new { @class = "text-danger" })
+                </div>
+            </div>  
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label for="IdFormaPago">Forma de pago*</label>
+                    @Html.DevExpress().ComboBoxFor(q => q.IdFormaPago, settings =>
                     {
-                        settings.Name = "Fecha_Pago";
-                        settings.Properties.UseMaskBehavior = true;
-                        settings.Properties.EditFormat = EditFormat.Date;
-                        settings.Properties.EditFormatString = "dd/MM/yyyy";
-                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                        settings.Name = "IdFormaPago";
                         settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                    }).GetHtml()
-                        @Html.ValidationMessageFor(q => q.Fecha_Pago, "", new { @class = "text-danger" })
-                    </div>
+                        settings.Properties.DisplayFormatString = "[{0}] - {1}";
+                        settings.Properties.Columns.Add("IdFormaPago", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(20);
+                        settings.Properties.Columns.Add("descripcion", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(80);
+                        //Campo ID
+                        settings.Properties.ValueField = "IdFormaPago";
+                        settings.Properties.ValueType = typeof(string);
+                        settings.Properties.TextField = "Descripción";
+                        //Boton para seleccionar ningun registro
+                        settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
+                        settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+
+                    }).BindList(ViewBag.lst_forma_pago).GetHtml()
+                    @Html.ValidationMessageFor(q => q.IdFormaPago, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="col-md-2">
@@ -189,8 +199,9 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="co_observacion">Observación*</label>
-                    @Html.TextBoxFor(q => q.Observacion, new { @class = "form-control", @id = "observacion" })
+                    <label for="MotiAnu">Motivo Anulacion*</label>
+                    @Html.TextBoxFor(q => q.MotivoAnu, new { @class = "form-control", @id = "MotiAnu" })
+                    @Html.ValidationMessageFor(q => q.MotivoAnu, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
@@ -213,7 +224,7 @@
                     <div class="col-md-12">
                         <div class="col-md-12">
                             <div class="form-group">
-                                <label for="co_observacion">Detalle de deudad a cancelar</label>
+                                <label for="co_observacion">Detalle de deuda a cancelar</label>
                                 @Html.Action("GridViewPartial_detalle_op")
                             </div>
                         </div>
@@ -227,7 +238,6 @@
                             <div class="form-group">
                                 <label for="co_observacion">Diario contable</label>
                                 @Html.Action("GridViewPartial_orden_pago_dc")
-
                             </div>
                         </div>
                     </div>
@@ -235,7 +245,6 @@
             </div>
         </div>
     </div>
-
     <div class="box-footer">
         <button type="submit" class="btn btn-danger">Anular</button>
         <a class="btn btn-default" href="@Url.Action("Index","OrdenPago",new { Area = "CuentasPorPagar" },null)">Cancelar</a>
